--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -130,25 +130,6 @@
         </section>
 
         <!-- Education -->
-        <section id="education" class="tab-content">
-            <h2 class="text-3xl font-bold mb-6 text-blue-600">Education</h2>
-            <div class="education mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Ph.D., Mechanical Engineering</h3>
-                <p>Indian Institute of Technology Madras, Chennai, Tamil Nadu | 2018 - 2025</p>
-                <p>Thesis: Experimental Investigation on Solar-Driven Multi-Effect Compact Sea Water Desalination System</p>
-            </div>
-            <div class="education mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">M.S. (By Research)</h3>
-                <p>CEG Guindy Campus, Anna University, Chennai, Tamil Nadu | 2014 - 2017</p>
-                <p>Thesis: Studies on Drying of Leafy Vegetables Using Modified Solar Evacuated Tube Collectors</p>
-            </div>
-            <div class="education mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">B.E., Mechanical Engineering</h3>
-                <p>Sri Venkateswara College of Engineering, Sriperumbudur, Tamil Nadu | 2010 - 2014</p>
-            </div>
-        </section>
-
-        <!-- Employment -->
     <section id="education" class="py-16">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold section-title" data-aos="fade-right">Education</h2>
@@ -172,72 +153,116 @@
         </div>
     </section>
 
+        <!-- Employment -->
+    <section id="employment" class="py-16 bg-gray-100">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold section-title" data-aos="fade-right">Employment History</h2>
+            <div class="space-y-6">
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up">
+                    <h3 class="text-xl font-semibold">Senior Project Scientist, IIT Madras</h3>
+                    <p class="text-gray-600">March 2025 - April 2025</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="100">
+                    <h3 class="text-xl font-semibold">Project Officer, IIT Madras</h3>
+                    <p class="text-gray-600">April 2023 - December 2024</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="200">
+                    <h3 class="text-xl font-semibold">Project Officer, IIT Madras</h3>
+                    <p class="text-gray-600">November 2017 - March 2020</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="300">
+                    <h3 class="text-xl font-semibold">Project Associate, IIT Madras</h3>
+                    <p class="text-gray-600">August 2017 - October 2017</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="400">
+                    <h3 class="text-xl font-semibold">Project Associate, IIT Madras</h3>
+                    <p class="text-gray-600">September 2016 - April 2017</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
         <!-- Publications -->
-        <section id="publications" class="tab-content">
-            <h2 class="text-3xl font-bold mb-6 text-blue-600">Publications</h2>
-            <h3 class="text-2xl font-semibold mb-4">Journal Articles</h3>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>K. Thilagan, S. Advaith, and A. Mani, "Simulation studies and experimental validation on solar multi effect desalination system," <i>Solar Compass</i>, vol. 13, p. 100–110, Mar. 2025. DOI: <a href="https://doi.org/10.1016/j.solcom.2025.100110">10.1016/j.solcom.2025.100110</a></p>
+    <section id="publications" class="py-16">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold section-title" data-aos="fade-right">Publications</h2>
+            <div class="space-y-6">
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up">
+                    <h3 class="text-xl font-semibold">Journal Articles</h3>
+                    <ul class="list-disc pl-6">
+                        <li>K. Thilagan, S. Advaith, and A. Mani, "Simulation studies and experimental validation on solar multi effect desalination system," <i>Solar Compass</i>, vol. 13, p. 100-110, Mar. 2025. <a href="https://doi.org/10.1016/j.solcom.2025.100110" class="text-blue-600 hover:underline">DOI</a></li>
+                        <li>M. Annamalai and K. Thilagan, "Experimental studies on solar multi-effect sea water desalination system," <i>Solar Energy</i>, vol. 259, pp. 246-256, Jul. 2023. <a href="https://doi.org/10.1016/j.solener.2023.05.004" class="text-blue-600 hover:underline">DOI</a></li>
+                        <li>P. Raghu, K. Thilagan, et al., "Spray Characteristics of Diesel and Biodiesel in Direct Injection Diesel Engine," <i>Advanced Materials Research</i>, vol. 768, pp. 173-179, Sep. 2013. <a href="https://doi.org/10.4028/www.scientific.net/AMR.768.173" class="text-blue-600 hover:underline">DOI</a></li>
+                    </ul>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="100">
+                    <h3 class="text-xl font-semibold">Conference Proceedings</h3>
+                    <ul class="list-disc pl-6">
+                        <li>K. Thilagan, S. Advaith, and A. Mani, "Experimental Studies on Compact Desalination System," in <i>8th International Conference on Polygeneration</i>, 2025 [Abstract accepted].</li>
+                        <li>K. Thilagan, S. Advaith, and A. Mani, "Simulation studies and experimental validation on solar multi-effect desalination system in Kanyakumari," in <i>8th National and 2nd International Conference on Refrigeration and Air Conditioning</i>, 2024, pp. 1-9.</li>
+                        <li>K. Thilagan and M. Annamalai, "Experimental studies on solar multi-effect desalination system," in <i>ISES and IEA SHC International Conference</i>, 2022, pp. 846-857. <a href="https://doi.org/10.18086/eurosun.2022.09.01" class="text-blue-600 hover:underline">DOI</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>M. Annamalai and K. Thilagan, "Experimental studies on solar multi-effect sea water desalination system," <i>Solar Energy</i>, vol. 259, pp. 246–256, Jul. 2023. DOI: <a href="https://doi.org/10.1016/j.solener.2023.05.004">10.1016/j.solener.2023.05.004</a></p>
-            </div>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>P. Raghu, K. Thilagan, M. Thirumoorthy, S. Lokachari, and N. Nallusamy, "Spray Characteristics of Diesel and Biodiesel in Direct Injection Diesel Engine," <i>Advanced Materials Research</i>, vol. 768, pp. 173–179, Sep. 2013. DOI: <a href="https://doi.org/10.4028/www.scientific.net/AMR.768.173">10.4028/www.scientific.net/AMR.768.173</a></p>
-            </div>
-            <h3 class="text-2xl font-semibold mb-4">Conference Proceedings</h3>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>K. Thilagan, S. Advaith, and A. Mani, "Experimental Studies on Compact Desalination System," in <i>8th International Conference on Polygeneration (ICP2025)</i>, 2025 [Abstract accepted; Full paper: Communicated]</p>
-            </div>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>K. Thilagan, S. Advaith, and A. Mani, "Simulation studies and experimental validation on solar multi-effect desalination system in Kanyakumari," in <i>8th National and 2nd International Conference on Refrigeration and Air Conditioning</i>, Chennai, India, 2024, pp. 1–9</p>
-            </div>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>K. Thilagan and M. Annamalai, "Experimental studies on solar multi-effect desalination system," in <i>ISES and IEA SHC International Conference on Solar Energy for Buildings and Industry</i>, 2022, pp. 846–857. DOI: <a href="https://doi.org/10.18086/eurosun.2022.09.01">10.18086/eurosun.2022.09.01</a></p>
-            </div>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>K. Thilagan and M. Annamalai, "Falling Film Measurements using High Speed Camera and High Speed Infra-Red Camera," in <i>ISES and IEA SHC International Conference on Solar Energy for Buildings and Industry</i>, 2022, pp. 858–868. DOI: <a href="https://doi.org/10.18086/eurosun.2022.09.02">10.18086/eurosun.2022.09.02</a></p>
-            </div>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>K. Thilagan and A. Mani, "Heat and mass transfer studies on falling film over metal foam layered horizontal tubes in MED system using high speed and high speed infra-red cameras," in <i>International Symposium on Compact Solar Desalination and Cold Storage Systems</i>, Chennai, India, 2022</p>
-            </div>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>K. Thilagan, R. Sivakumar, and R. Saravanan, "Energy analysis of thin layer drying of moringa leaf using solar evacuated finned tube collectors," in <i>National Conference on Large Scale Multi-Disciplinary Systems of National Significance</i>, Satish Dhawan Space Centre SHAR, 2016</p>
-            </div>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>K. Thilagan, A. Elaya Perumal, and R. Saravanan, "Energy analysis of thin layer drying of tomato using solar evacuated finned tube collectors," in <i>4th National Conference on Refrigeration and Air Conditioning</i>, 2015</p>
-            </div>
-            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
-                <p>P. Raghu, K. Thilagan, M. Thirumoorthy, S. Lokachari, and N. Nallusamy, "Spray Characteristics of Diesel and Biodiesel in Direct Injection Diesel Engine," in <i>International Conference on Energy Efficient Technologies for Sustainability</i>, St. Xavier's Catholic College of Engineering, Nagercoil, Tamil Nadu, India, Apr. 2013</p>
-            </div>
-        </section>
+        </div>
+    </section>
 
         <!-- Skills -->
-        <section id="skills" class="tab-content">
-            <h2 class="text-3xl font-bold mb-6 text-blue-600">Skills</h2>
-            <ul class="list-disc pl-6">
-                <li><strong>Coding:</strong> Matlab, LaTeX</li>
-                <li><strong>Software Packages:</strong> Ansys, Comsol, Solidworks, AutoCAD, EES, TRNSYS</li>
-                <li><strong>Languages:</strong> English (Proficient), Tamil (Speaking)</li>
-            </ul>
-        </section>
+    <section id="skills" class="py-16 bg-gray-100">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold section-title" data-aos="fade-right">Skills</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up">
+                    <h3 class="text-xl font-semibold">Coding</h3>
+                    <p>Matlab, LaTeX</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="100">
+                    <h3 class="text-xl font-semibold">Software Packages</h3>
+                    <p>Ansys, Comsol, Solidworks, AutoCAD, EES, TRNSYS</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="200">
+                    <h3 class="text-xl font-semibold">Languages</h3>
+                    <p>English (Proficient), Tamil (Speaking)</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
         <!-- Awards -->
-        <section id="awards" class="tab-content">
-            <h2 class="text-3xl font-bold mb-6 text-blue-600">Awards & Certifications</h2>
-            <div class="award mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Early Stage Researcher</h3>
-                <p>University Rovira I Virgili, Tarragona, Spain | Mar 2015</p>
+    <section id="awards" class="py-16">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold section-title" data-aos="fade-right">Awards & Certifications</h2>
+            <div class="space-y-6">
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up">
+                    <h3 class="text-xl font-semibold">Early Stage Researcher</h3>
+                    <p class="text-gray-600">University Rovira I Virgili, Tarragona, Spain, March 2015</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="100">
+                    <h3 class="text-xl font-semibold">Organizing Committee</h3>
+                    <p class="text-gray-600">Workshop on Natural Refrigerants-based HVAC&R Systems, IIT Madras, April 2025</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="200">
+                    <h3 class="text-xl font-semibold">Recognized Reviewer</h3>
+                    <p>International Journal Renewable Energy, Solar Energy, Applied Thermal Engineering, Desalination, Clean Energy, Journal of Cleaner Production</p>
+                </div>
             </div>
-            <div class="award mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Organizing Committee</h3>
-                <p>Workshop on Natural Refrigerants-based HVAC&R Systems, IIT Madras | Apr 2025</p>
+        </div>
+    </section>
+
+        <!-- Memberships Section -->
+    <section id="memberships" class="py-16 bg-gray-100">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold section-title" data-aos="fade-right">Professional Memberships</h2>
+            <div class="space-y-6">
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up">
+                    <p>Life Member, Indian Desalination Association (InDA) - LM501</p>
+                    <p>Member, Indian Society of Heating, Refrigerating and Air Conditioning Engineers (ISHRAE) - 30662</p>
+                    <p>Member, International Solar Energy Society (ISES)</p>
+                    <p>Member, International Desalination Association (IDA) - 168542</p>
+                </div>
             </div>
-            <div class="award mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Organizing Committee</h3>
-                <p>8th National and 2nd International Conference on Refrigeration and Air Conditioning, IIT Madras | Mar 2024</p>
-            </div>
-        </section>
+        </div>
+    </section>
 
         <!-- Contact -->
         <section id="contact" class="tab-content">
