--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -56,7 +56,7 @@
     <!-- Header -->
     <header class="header-bg h-screen flex items-center justify-center text-white relative">
         <div class="text-center z-10">
-            <img src="thil.jpg" alt="Dr. Thilagan K." class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-blue-300">
+            <img src="people/thilagan.JPEG" alt="Dr. Thilagan K." class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-blue-300">
             <h1 class="text-5xl font-bold mb-2">Dr. Thilagan K.</h1>
             <p class="text-xl">Researcher in Solar Energy and Desalination</p>
             <div class="mt-4 flex justify-center space-x-4">
@@ -92,20 +92,23 @@
 
         <!-- Education -->
         <section id="education" class="tab-content">
-            <h2 class="text-3xl font-bold mb-6 text-blue-600">Education</h2>
-            <div class="education mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Ph.D., Mechanical Engineering</h3>
-                <p>Indian Institute of Technology Madras, Chennai, Tamil Nadu | 2018 - 2025</p>
-                <p>Thesis: Experimental Investigation on Solar-Driven Multi-Effect Compact Sea Water Desalination System</p>
-            </div>
-            <div class="education mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">M.S. (By Research)</h3>
-                <p>CEG Guindy Campus, Anna University, Chennai, Tamil Nadu | 2014 - 2017</p>
-                <p>Thesis: Studies on Drying of Leafy Vegetables Using Modified Solar Evacuated Tube Collectors</p>
-            </div>
-            <div class="education mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">B.E., Mechanical Engineering</h3>
-                <p>Sri Venkateswara College of Engineering, Sriperumbudur, Tamil Nadu | 2010 - 2014</p>
+            <h2 class="text-4xl font-semibold text-indigo-900 mb-6">Education</h2>
+            <div class="space-y-6">
+                <div>
+                    <h3 class="text-xl font-medium">Ph.D., Indian Institute of Technology Madras</h3>
+                    <p class="text-gray-600">2018 - 2025</p>
+                    <p class="text-gray-700">Thesis: Experimental Investigation on Solar-Driven Multi-Effect Compact Sea Water Desalination System</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-medium">M.S. (By Research), Anna University, Chennai</h3>
+                    <p class="text-gray-600">2014 - 2017</p>
+                    <p class="text-gray-700">Thesis: Studies on Drying of Leafy Vegetables Using Modified Solar Evacuated Tube Collectors</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-medium">B.E., Sri Venkateswara College of Engineering</h3>
+                    <p class="text-gray-600">2010 - 2014</p>
+                    <p class="text-gray-700">Branch: Mechanical Engineering</p>
+                </div>
             </div>
         </section>
 
