--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -56,7 +56,7 @@
     <!-- Header -->
     <header class="header-bg h-screen flex items-center justify-center text-white relative">
         <div class="text-center z-10">
-            <img src="people/thilagan.JPEG" alt="Dr. Thilagan K." class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-blue-300">
+            <img src="thilagan.JPEG" alt="Dr. Thilagan K." class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-blue-300">
             <h1 class="text-5xl font-bold mb-2">Dr. Thilagan K.</h1>
             <p class="text-xl">Researcher in Solar Energy and Desalination</p>
             <div class="mt-4 flex justify-center space-x-4">
@@ -114,26 +114,33 @@
 
         <!-- Employment -->
         <section id="employment" class="tab-content">
-            <h2 class="text-3xl font-bold mb-6 text-blue-600">Employment History</h2>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Senior Project Scientist</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Mar 2025 - Apr 2025</p>
-            </div>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Project Officer</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Apr 2023 - Dec 2024</p>
-            </div>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Project Officer</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Nov 2017 - Mar 2020</p>
-            </div>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Project Associate</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Aug 2017 - Oct 2017</p>
-            </div>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Project Associate</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Sep 2016 - Apr 2017</p>
+            <h2 class="text-4xl font-semibold text-indigo-900 mb-6">Employment History</h2>
+            <div class="space-y-6">
+                <div>
+                    <h3 class="text-xl font-medium">Senior Project Scientist, IIT Madras</h3>
+                    <p class="text-gray-600">March 2025 - April 2025</p>
+                    <p class="text-gray-700">Department of Mechanical Engineering</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-medium">Project Officer, IIT Madras</h3>
+                    <p class="text-gray-600">April 2023 - December 2024</p>
+                    <p class="text-gray-700">Department of Mechanical Engineering</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-medium">Project Officer, IIT Madras</h3>
+                    <p class="text-gray-600">November 2017 - March 2020</p>
+                    <p class="text-gray-700">Department of Mechanical Engineering</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-medium">Project Associate, IIT Madras</h3>
+                    <p class="text-gray-600">August 2017 - October 2017</p>
+                    <p class="text-gray-700">Department of Mechanical Engineering</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-medium">Project Associate, IIT Madras</h3>
+                    <p class="text-gray-600">September 2016 - April 2017</p>
+                    <p class="text-gray-700">Department of Mechanical Engineering</p>
+                </div>
             </div>
         </section>
 
