--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -153,27 +153,27 @@
                 <button class="tab-btn px-4 py-2 bg-gray-200 text-gray-800 rounded hover:bg-gray-300 transition" data-tab="media">Media</button>
             </div>
             <div id="journal" class="tab-content active">
-                <div class="publication-item">
+                <div class="publication">
                     <p>K. Thilagan, S. Advaith, and A. Mani, "Simulation studies and experimental validation on solar multi effect desalination system," <i>Solar Compass</i>, vol. 13, p. 100-110, Mar. 2025. DOI: 10.1016/j.solcom.2025.100110</p>
                 </div>
                 <div class="publication-item">
                     <p>M. Annamalai and K. Thilagan, "Experimental studies on solar multi-effect sea water desalination system," <i>Solar Energy</i>, vol. 259, pp. 246-256, Jul. 2023. DOI: 10.1016/j.solener.2023.05.004</p>
                 </div>
-                <div class="publication-item">
+                <div class="publication">
                     <p>P. Raghu, K. Thilagan, et al., "Spray Characteristics of Diesel and Biodiesel in Direct Injection Diesel Engine," <i>Advanced Materials Research</i>, vol. 768, pp. 173-179, Sep. 2013. DOI: 10.4028/www.scientific.net/AMR.768.173</p>
                 </div>
             </div>
             <div id="conference" class="tab-content">
-                <div class="publication-item">
+                <div class="publication">
                     <p>K. Thilagan, S. Advaith, and A. Mani, "Experimental Studies on Compact Desalination System," in <i>8th International Conference on Polygeneration (ICP2025)</i>, 2025 [Abstract accepted; Full paper: Communicated]</p>
                 </div>
-                <div class="publication-item">
+                <div class="publication">
                     <p>K. Thilagan, S. Advaith, and A. Mani, "Simulation studies and experimental validation on solar multi-effect desalination system in Kanyakumari," in <i>8th National and 2nd International Conference on Refrigeration and Air Conditioning</i>, Chennai, 2024, pp. 1-9</p>
                 </div>
                 <!-- Add more conference proceedings as needed -->
             </div>
             <div id="media" class="tab-content">
-                <div class="publication-item">
+                <div class="publication">
                     <p>IIT Madras LinkedIn, "IIT Madras has developed a solar-powered desalination system," 2025. <a href="https://acesse.one/KZtNc" class="text-indigo-600 hover:underline">Link</a></p>
                 </div>
                 <div class="publication-item">
