--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Thilagan K. - Research Profile</title>
+    <title>Dr. Thilagan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
@@ -149,8 +149,6 @@
             <h2 class="text-4xl font-semibold text-indigo-900 mb-6">Publications</h2>
             <div class="flex space-x-4 mb-6">
                 <button class="tab-btn px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-800 transition" data-tab="journal">Journal Articles</button>
-                <button class="tab-btn px-4 py-2 bg-gray-200 text-gray-800 rounded hover:bg-gray-300 transition" data-tab="conference">Conference Proceedings</button>
-                <button class="tab-btn px-4 py-2 bg-gray-200 text-gray-800 rounded hover:bg-gray-300 transition" data-tab="media">Media</button>
             </div>
             <div id="journal" class="tab-content active">
                 <div class="publication">
@@ -162,24 +160,6 @@
                 <div class="publication">
                     <p>P. Raghu, K. Thilagan, et al., "Spray Characteristics of Diesel and Biodiesel in Direct Injection Diesel Engine," <i>Advanced Materials Research</i>, vol. 768, pp. 173-179, Sep. 2013. DOI: 10.4028/www.scientific.net/AMR.768.173</p>
                 </div>
-            </div>
-            <div id="conference" class="tab-content">
-                <div class="publication">
-                    <p>K. Thilagan, S. Advaith, and A. Mani, "Experimental Studies on Compact Desalination System," in <i>8th International Conference on Polygeneration (ICP2025)</i>, 2025 [Abstract accepted; Full paper: Communicated]</p>
-                </div>
-                <div class="publication">
-                    <p>K. Thilagan, S. Advaith, and A. Mani, "Simulation studies and experimental validation on solar multi-effect desalination system in Kanyakumari," in <i>8th National and 2nd International Conference on Refrigeration and Air Conditioning</i>, Chennai, 2024, pp. 1-9</p>
-                </div>
-                <!-- Add more conference proceedings as needed -->
-            </div>
-            <div id="media" class="tab-content">
-                <div class="publication">
-                    <p>IIT Madras LinkedIn, "IIT Madras has developed a solar-powered desalination system," 2025. <a href="https://acesse.one/KZtNc" class="text-indigo-600 hover:underline">Link</a></p>
-                </div>
-                <div class="publication-item">
-                    <p>The Times of India, "IIT-M's solar-powered unit aims at 10K litres of potable water per day," Jun. 2025. <a href="https://timesofindia.indiatimes.com/city/chennai/iit-ms-solar-powered-desalunit-aims-at-10k-litres-of-potable-water-per-day/articleshow/121605041.cms" class="text-indigo-600 hover:underline">Link</a></p>
-                </div>
-                <!-- Add more media items as needed -->
             </div>
         </section>
 
