--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -58,7 +58,7 @@
         <div class="text-center z-10">
             <img src="thilagan.JPEG" alt="Dr. Thilagan K." class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-blue-300">
             <h1 class="text-5xl font-bold mb-2">Dr. Thilagan K.</h1>
-            <p class="text-xl">Researcher in Solar Energy and Desalination</p>
+            <p class="text-xl">Area of Researcher : Compact desalination, Desalination, Solar Energy</p>
             <div class="mt-4 flex justify-center space-x-4">
                 <a href="mailto:kthilagan177@gmail.com">Email</a>
                 <a href="https://scholar.google.com/citations?user=5lldYecAAAAJ" target="_blank">Google Scholar</a>
@@ -146,21 +146,18 @@
 
         <!-- Publications -->
         <section id="publications" class="tab-content">
-            <h2 class="text-4xl font-semibold text-indigo-900 mb-6">Publications</h2>
-            <div class="flex space-x-4 mb-6">
-                <button class="tab-btn px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-800 transition" data-tab="journal">Journal Articles</button>
-            </div>
-            <div id="journal" class="tab-content active">
-                <div class="publication">
+            <h2 class="text-3xl font-bold mb-6 section-heading">Publications</h2>
+            <h3 class="text-2xl font-semibold mb-4">Journal Articles</h3>
+            <div class="publication mb-6 bg-white p-4 rounded-lg shadow">
+                <div class="publication-item">
                     <p>K. Thilagan, S. Advaith, and A. Mani, "Simulation studies and experimental validation on solar multi effect desalination system," <i>Solar Compass</i>, vol. 13, p. 100-110, Mar. 2025. DOI: 10.1016/j.solcom.2025.100110</p>
                 </div>
                 <div class="publication-item">
                     <p>M. Annamalai and K. Thilagan, "Experimental studies on solar multi-effect sea water desalination system," <i>Solar Energy</i>, vol. 259, pp. 246-256, Jul. 2023. DOI: 10.1016/j.solener.2023.05.004</p>
                 </div>
-                <div class="publication">
+                <div class="publication-item">
                     <p>P. Raghu, K. Thilagan, et al., "Spray Characteristics of Diesel and Biodiesel in Direct Injection Diesel Engine," <i>Advanced Materials Research</i>, vol. 768, pp. 173-179, Sep. 2013. DOI: 10.4028/www.scientific.net/AMR.768.173</p>
                 </div>
-            </div>
         </section>
 
         <!-- Skills -->
